# cortex-ai

./: renovate.json
docs/: graph_flow.md
mobile/: .env.example  app.json  package-lock.json  package.json
mobile/app/: _layout.tsx  chat.tsx  index.tsx
server/: .env.example  .gitignore  agent.py  main.py  pyproject.toml  state.py  tools.py  utils.py
server/agents/: __init__.py  graph.py  state.py
server/agents/nodes/: __init__.py  agent_node.py  collect_job_preferences_node.py  drive_node.py  find_jobs_node.py  resume_check_node.py  resume_upload_node.py  router.py  summary_node.py  tool_node.py
server/agents/nodes/email/: __init__.py  read.py  write_reply.py
server/agents/researcher/: __init__.py  graph.py  state.py
server/agents/researcher/nodes/: __init__.py  agent_node.py  excel_builder_node.py  firecrawl_node.py  playwright_node.py
server/agents/researcher/prompts/: agent_node.md  playwright_node.md
server/agents/routers/: resume_router.py  router.py
server/lib/: supabase.py
server/prompts/: ai_news_search.md  job_preferences_parser.md  resume_parser.md  scheduled_email_check.md  scheduled_tasks.json  system.md
server/prompts/search/: ai_news.md  product_hunt.md
server/schemas/: chat.py  job_preferences.py  scheduled_tasks.py
server/services/: drive_events.py  gmail_send.py  scheduled_tasks.py  task_registry.py  telegram.py
server/tools/: __init__.py  drive.py  email.py  job_intent.py  places.py  product_hunt.py  schedule.py  search.py  weather.py
server/types/: email.py
web/: package-lock.json  package.json
web/app/: app.css  (+1 more)
(+16 files in other folders)
